Fixed Folder Structure

--- a/project/index.html
+++ b/project/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graffiti API
-    </title>
+    <title>Graffiti API</title>
+
+    <link rel="stylesheet" href="CSS/design.css">
+
 </head>
 <body>
+<script src="JS/actualcode.js">
 
+    
+</script>
     <h1>
         Hello
     </h1>
